--- a/pages/accesorios.html
+++ b/pages/accesorios.html
@@ -10,13 +10,13 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet" />
 
     <title>ACCESORIOS</title>
-    <link rel="stylesheet" href="../estilos/style.css">
+    <link rel="stylesheet" href="/css/style.css">
 </head>
 
 
 <body>
-    <!-- HEADER DE ACCESORIOS -->
-     <header class="index-header  ">
+
+    <header class="index-header  ">
         <div class="index-header-flex  ">
             <nav class="navbar navbar-expand-lg fixed-top z-2 ">
 
@@ -35,16 +35,16 @@
 
                         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                             <li class="nav-item">
-                                <a class="nav-link" href="../pages/hombre.html">Hombre</a>
+                                <a class="nav-link" href="./hombre.html">Hombre</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="../pages/mujer.html">Mujer</a>
+                                <a class="nav-link" href="./mujer.html">Mujer</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="../pages/accesorios.html">Acessorios</a>
+                                <a class="nav-link" href="./accesorios.html">Acessorios</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="../pages/sobrenosotros.html">Sobre nosotros</a>
+                                <a class="nav-link" href="sobrenosotros.html">Sobre nosotros</a>
                             </li>
                         </ul>
                     </div>
@@ -53,178 +53,256 @@
         </div>
     </header>
 
-    <!-- MAIN DE MUJERES DONDE APARECEN NUESTRAS REMERAS -->
-    <main class="index-main m-0 p-0 ">
-        <h2 class="nuestrasremeras-index-h2 ">WOMAN</h2>
+    <!-- MAIN DONDE APARECEN NUESTRAS REMERAS -->
+<main>
+        <h2 class=" nuestrasremeras-men-h2 pt-5 ms-5 text-start">VER TODO</h2>
 
-        <div class=" row ultimos-oversize-contenedor"><!-- Contenedor de los productos -->
+
+        <!-- Contenedor de los productos -->
+        <div class="d-flex contenedor-men flex-wrap align-items-center h-100">
 
             <!-- PRIMERA CARD -->
-            <div class="col-6 col-md-3  p-0 rounded">
-                <div class="remeraindex w-100">
-                    <div class="productor-remera-img w-100 p-0 "><img class="w-100" src="../img/Negro.jpeg"
-                            alt="remeranegra"></div>
 
-                    <div class="productor-remera-descripcion m-3">
-                         <h3 class="m-0 p-0">DRACULA</h3>
-                        <p class="m-0 p-0">OVERSIZE COMODIDA </p>
-                        <p class="">$30</p>
+            <div class="w-50 img-card p-1">
+                <div>
+                    <img class=" card-img w-100" src="../img/card-oversize-index4.jpg" alt="remeranegra">
+                </div>
+
+                <div class="card-info m-3">
+                    <div class="d-flex flex-nowrap flex-row align-items-center justify-content-between">
+                        <h3 class="fs-6">World Vision </h3>
+                        <div class="position-relative ">
+                            <img src="/img/Corazon.png" alt="corazón" width="30px" height="30px">
+                        </div>
+
                     </div>
+                    <p><span>$ 30</span></p>
                 </div>
             </div>
 
             <!-- SEGUNDA CARD -->
-            <div class="col-6 col-md-3  p-0 rounded ">
-                <div class="remeraindex w-100 h-100">
-                    <div class="productor-remera-img w-100 p-0 "><img class="w-100" src="../img/Negro.jpeg"
-                            alt="remeranegra"></div>
+            <div class="w-50 img-card p-1">
+                <div>
+                    <img class="card-img w-100" src="../img/card-oversize-index3.jpg" alt="remeranegra">
+                </div>
 
-                    <div class="productor-remera-descripcion m-3">
-                          <h3 class="m-0 p-0">DRACULA</h3>
-                        <p class="m-0 p-0">OVERSIZE COMODIDA </p>
-                        <p class="">$30</p>
+                <div class="card-info m-3">
+                    <div class="d-flex flex-nowrap flex-row align-items-center justify-content-between">
+                        <h3 class="fs-6">Ame la Nuit</h3>
+                        <div class="position-relative ">
+                            <img src="/img/Corazon.png" alt="corazón" width="30px" height="30px">
+                        </div>
+
                     </div>
+                    <p><span>$ 30</span></p>
                 </div>
             </div>
 
             <!-- TERCERA CARD -->
-            <div class="col-6 col-md-3  p-0 rounded ">
-                <div class="remeraindex ">
-                    <div class="productor-remera-img w-100 p-0 "><img class="w-100" src="../img/Negro.jpeg"
-                            alt="remeranegra"></div>
+            <div class="w-50 img-card p-1">
+                <div>
+                    <img class="card-img w-100" src="../img/carrusel1index.jpg" alt="remeranegra">
+                </div>
 
-                    <div class="productor-remera-descripcion m-3">
-                         <h3 class="m-0 p-0">DRACULA</h3>
-                        <p class="m-0 p-0">OVERSIZE COMODIDA </p>
-                        <p class="">$30</p>
+                <div class="card-info m-3">
+                    <div class="d-flex flex-nowrap flex-row align-items-center justify-content-between">
+                        <h3 class="fs-6">Blessed Angel</h3>
+                        <div class="position-relative ">
+                            <img src="/img/Corazon.png" alt="corazón" width="30px" height="30px">
+                        </div>
 
                     </div>
+                    <p><span>$ 30</span></p>
                 </div>
             </div>
 
             <!-- CUARTA CARD -->
-            <div class="col-6 col-md-3  p-0 rounded ">
-                <div class="remeraindex ">
-                    <div class="productor-remera-img w-100 p-0 "><img class="w-100" src="../img/Negro.jpeg"
-                            alt="remeranegra"></div>
-
-                    <div class="productor-remera-descripcion m-3">
-                          <h3 class="m-0 p-0">DRACULA</h3>
-                        <p class="m-0 p-0">OVERSIZE COMODIDA </p>
-                        <p class="">$30</p>
-                    </div>
+            <div class="w-50 img-card  h-100  p-1">
+                <div>
+                    <img class="card-img w-100" src="../img/carussel3index.jpg" alt="remeranegra">
                 </div>
-            </div>
 
-            <!-- 5ta CARD -->
-            <div class="col-6 col-md-3  p-0 rounded ">
-                <div class="remeraindex ">
-                    <div class="productor-remera-img w-100 p-0 "><img class="w-100" src="../img/Negro.jpeg"
-                            alt="remeranegra"></div>
+                <div class=" card-info m-3">
+                    <div class="d-flex flex-nowrap flex-row align-items-center justify-content-between">
+                        <h3 class="fs-6">Tokyo Forest</h3>
+                        <div class="position-relative ">
+                            <img src="/img/Corazon.png" alt="corazón" width="30px" height="30px">
+                        </div>
 
-                    <div class="productor-remera-descripcion m-3">
-                         <h3 class="m-0 p-0">DRACULA</h3>
-                        <p class="m-0 p-0">OVERSIZE COMODIDA </p>
-                        <p class="">$30</p>
                     </div>
+                    <p><span>$ 30</span></p>
                 </div>
             </div>
             <!-- 6ta CARD -->
-            <div class="col-6 col-md-3  p-0 rounded ">
-                <div class="remeraindex ">
-                    <div class="productor-remera-img w-100 p-0 "><img class="w-100" src="../img/Negro.jpeg"
-                            alt="remeranegra"></div>
+            <div class="w-50 img-card  p-1">
+                <div>
+                    <img class=" card-img w-100" src="../img/card-oversize-index6.jpg" alt="remeranegra">
+                </div>
+                <div class="card-info m-3">
+                    <div class="d-flex flex-nowrap flex-row align-items-center justify-content-between">
+                        <h3 class="fs-6">New York Yankees</h3>
+                        <div class="position-relative ">
+                            <img src="/img/Corazon.png" alt="corazón" width="30px" height="30px">
+                        </div>
 
-                    <div class="productor-remera-descripcion m-3">
-                          <h3 class="m-0 p-0">DRACULA</h3>
-                        <p class="m-0 p-0">OVERSIZE COMODIDA </p>
-                        <p class="">$30</p>
                     </div>
+                    <p><span>$ 30</span></p>
                 </div>
             </div>
             <!-- 7ta CARD -->
-            <div class="col-6 col-md-3  p-0 rounded ">
-                <div class="remeraindex ">
-                    <div class="productor-remera-img w-100 p-0 "><img class="w-100" src="../img/Negro.jpeg"
-                            alt="remeranegra"></div>
+            <div class="w-50 img-card  p-1">
+                <div>
+                    <img class=" card-img w-100" src="../img/carrusel5index.jpg" alt="remeranegra">
+                </div>
+                <div class="card-info m-3">
+                    <div class="d-flex flex-nowrap flex-row align-items-center justify-content-between">
+                        <h3 class="fs-6">Grow the Game</h3>
+                        <div class="position-relative ">
+                            <img src="/img/Corazon.png" alt="corazón" width="30px" height="30px">
+                        </div>
 
-                    <div class="productor-remera-descripcion m-3">
-                         <h3 class="m-0 p-0">DRACULA</h3>
-                        <p class="m-0 p-0">OVERSIZE COMODIDA </p>
-                        <p class="">$30</p>
                     </div>
+                    <p><span>$ 30</span></p>
                 </div>
             </div>
-            <!-- 8ta CARD -->
-            <div class="col-6 col-md-3  p-0 rounded ">
-                <div class="remeraindex ">
-                    <div class="productor-remera-img w-100 p-0 "><img class="w-100" src="../img/Negro.jpeg"
-                            alt="remeranegra"></div>
 
-                    <div class="productor-remera-descripcion m-3">
-                          <h3 class="m-0 p-0">DRACULA</h3>
-                        <p class="m-0 p-0">OVERSIZE COMODIDA </p>
-                        <p class="">$30</p>
+            <!-- 8ta CARD -->
+            <div class="p-1 img-card">
+                <div>
+                    <img class="card-img w-100" src="../img/carrusel2index.jpg" alt="remeranegra">
+                </div>
+                <div class="card-info m-3">
+                    <div class="d-flex flex-nowrap flex-row align-items-center justify-content-between">
+                        <h3 class="fs-6">Wise Moves</h3>
+                        <div class="position-relative ">
+                            <img src="/img/Corazon.png" alt="corazón" width="30px" height="30px">
+                        </div>
+
                     </div>
+                    <p><span>$ 30</span></p>
                 </div>
             </div>
             <!-- 9ta CARD -->
-            <div class="col-6 col-md-3 p-0 rounded ">
-                <div class="remeraindex ">
-                    <div class="productor-remera-img w-100 p-0 "><img class="w-100" src="../img/Negro.jpeg"
-                            alt="remeranegra"></div>
+            <div class=" img-card  p-1">
+                <div>
+                    <img class="card-img w-100" src="../img/card-oversize-index1.jpg" alt="remeranegra">
+                </div>
+                <div class="card-info m-3">
+                    <div class="d-flex flex-nowrap flex-row align-items-center justify-content-between">
+                        <h3 class="fs-6">1Million People</h3>
+                        <div class="position-relative ">
+                            <img src="/img/Corazon.png" alt="corazón" width="30px" height="30px">
+                        </div>
 
-                    <div class="productor-remera-descripcion m-3">
-                          <h3 class="m-0 p-0">DRACULA</h3>
-                        <p class="m-0 p-0">OVERSIZE COMODIDA </p>
-                        <p class="">$30</p>
                     </div>
+                    <p><span>$ 30</span></p>
                 </div>
             </div>
-            <!-- 10ma CARD -->
-            <div class="col-6 col-md-3 p-0 rounded ">
-                <div class="remeraindex ">
-                    <div class="productor-remera-img w-100 p-0 "><img class="w-100" src="../img/Negro.jpeg"
-                            alt="remeranegra"></div>
+            <div class="w-50 img-card p-1">
+                <div>
+                    <img class=" card-img w-100" src="../img/card-oversize-index4.jpg" alt="remeranegra">
+                </div>
 
-                    <div class="productor-remera-descripcion m-3">
-                          <h3 class="m-0 p-0">DRACULA</h3>
-                        <p class="m-0 p-0">OVERSIZE COMODIDA </p>
-                        <p class="">$30</p>
+                <div class="card-info m-3">
+                    <div class="d-flex flex-nowrap flex-row align-items-center justify-content-between">
+                        <h3 class="fs-6">World Vision </h3>
+                        <div class="position-relative ">
+                            <img src="/img/Corazon.png" alt="corazón" width="30px" height="30px">
+                        </div>
+
                     </div>
+                    <p><span>$ 30</span></p>
                 </div>
             </div>
+
+            <div class="w-50 img-card p-1">
+                <div>
+                    <img class=" w-100" src="../img/card-oversize-index4.jpg" alt="remeranegra">
+                </div>
+
+                <div class="card-info m-3">
+                    <div class="d-flex flex-nowrap flex-row align-items-center justify-content-between">
+                        <h3 class="fs-6">World Vision </h3>
+                        <div class="position-relative ">
+                            <img src="/img/Corazon.png" alt="corazón" width="30px" height="30px">
+                        </div>
+
+                    </div>
+                    <p><span>$ 30</span></p>
+                </div>
+            </div>
+
+
+            <div class="w-50 img-card p-1">
+                <div>
+                    <img class=" w-100" src="../img/card-oversize-index4.jpg" alt="remeranegra">
+                </div>
+
+                <div class="card-info m-3">
+                    <div class="d-flex flex-nowrap flex-row align-items-center justify-content-between">
+                        <h3 class="fs-6">World Vision </h3>
+                        <div class="position-relative ">
+                            <img src="/img/Corazon.png" alt="corazón" width="30px" height="30px">
+                        </div>
+
+                    </div>
+                    <p><span>$ 30</span></p>
+                </div>
+            </div>
+
+
+            <div class="w-50 img-card p-1">
+                <div>
+                    <img class=" w-100" src="../img/card-oversize-index4.jpg" alt="remeranegra">
+                </div>
+
+                <div class="card-info m-3">
+                    <div class="d-flex flex-nowrap flex-row align-items-center justify-content-between">
+                        <h3 class="fs-6">World Vision </h3>
+                        <div class="position-relative ">
+                            <img src="/img/Corazon.png" alt="corazón" width="30px" height="30px">
+                        </div>
+
+                    </div>
+                    <p><span>$ 30</span></p>
+                </div>
+            </div>
+
+
 
     </main>
 
-    <!-- FOOTER DE MUJER -->
-    <footer class=" text-start pt-3 w-100">
 
-        <div class="footer-conteiner-grid p-0 m-0">
-            <div class="div1">
-                <ul class=" flex-column align-items-stretch w-100">
+
+    <!-- FOOTER DE INDEX -->
+    <footer class=" text-start w-100 footer-index">
+
+        <div class="footer-conteiner-grid ">
+            <div class="div1 py-5">
+                <ul class=" flex-column align-items-stretch w-100 ">
                     <li>Ayuda</li>
                     <li>Mi cuenta</li>
-                    <li>Store Locator</li>
-                    <li>Store Locator </li>
                     <li>Gift Card </li>
+                    <li>Productos</li>
+                    <li>Sobre nosotros</li>
                 </ul>
             </div>
         </div>
 
-        <div class="footer-redessociales m-0">
+        <div class="m-0 p-0">
             <div>
-                <div class="d-flex flex-column">
+                <div class="d-flex row ">
                     <ul class="d-flex">
                         <li>Copyright © UNIQLO Co., Ltd. All rights reserved.</li>
                     </ul>
-                    <div class="d-flex flex-column align-items-center justify-content-center">
-                        <ul class="d-flex  footer-ul flex-row align-items-center justify-content-center">
-                            <li> <a href=""><img src="../img/logo faceboock.png" alt="FACEBOOCK"></a></li>
-                            <li> <a href=""><img src="../img/Logo instagram.png" alt="Instagram"></a></li>
-                            <li> <a href=""><img src="../img/youtube_social_icon_dark.png" alt=""></a></li>
-                            <li> <a href=""> <img src="../img/tiktok.png" alt="Tiktok"></a></li>
+                    <div class="w-100 ">
+                        <ul class="d-flex flex-row footer-ul align-items-center justify-content-center">
+                            <li> <a href="#"><img src="../img/logo faceboock.png" alt="FACEBOOCK"></a></li>
+                            <li> <a href="#"><img src="../img/Logo instagram.png" alt="Instagram"></a></li>
+                            <li> <a href="#"><img src="../img/youtube_social_icon_dark.png" alt=""></a></li>
+                            <li> <a href="#"><img src="../img/tiktok.png" alt="Tiktok"></a></li>
                         </ul>
+
                         <p class="p-footer-derechos m-0 p-2 w-100">Todos los derechos reservados </p>
                     </div>
 
@@ -235,6 +313,7 @@
         </div>
 
     </footer>
+
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js"
